3a/mini_pascal.output
Grammar

    0 $accept: Program $end

    1 Program: PROGRAM ID '(' Identifier_list ')' ';' Declarations Subprogram_declarations Compound_statement '.'

    2 Identifier_list: ID
    3                | Identifier_list ',' ID

    4 Declarations: Declarations VAR Identifier_list ':' Type ';'
    5             | /* empty */

    6 Type: Standard_type
    7     | ARRAY '[' INUM ARRSEP INUM ']' OF Standard_type

    8 Standard_type: INTEGER
    9              | REAL

   10 Subprogram_declarations: Subprogram_declarations Subprogram_declaration ';'
   11                        | /* empty */

   12 Subprogram_declaration: Subprogram_head Declarations Compound_statement

   13 Subprogram_head: FUNCTION ID Arguments ':' Standard_type ';'
   14                | PROCEDURE ID Arguments ';'

   15 Arguments: '(' Parameter_list ')'
   16          | /* empty */

   17 Parameter_list: Identifier_list ':' Type
   18               | Parameter_list ';' Identifier_list ':' Type

   19 Compound_statement: BEG Optional_statements END

   20 Optional_statements: Statement_list
   21                    | /* empty */

   22 Statement_list: Statement
   23               | Statement_list ';' Statement

   24 Statement: Variable ASSIGNOP Expression
   25          | Procedure_statement
   26          | Compound_statement
   27          | IF Expression THEN Statement ELSE Statement
   28          | WHILE Expression DO Statement

   29 Variable: ID
   30         | ID '[' Expression_list ']'

   31 Procedure_statement: ID
   32                    | ID '(' Expression_list ')'

   33 Expression_list: Expression
   34                | Expression_list ',' Expression

   35 Expression: Simple_expression
   36           | Simple_expression RELOP Simple_expression

   37 Simple_expression: Term
   38                  | ADDOP Term
   39                  | Simple_expression ADDOP Term

   40 Term: Factor
   41     | Term MULOP Factor

   42 Factor: ID
   43       | ID '(' Expression_list ')'
   44       | INUM
   45       | RNUM
   46       | '(' Expression ')'
   47       | ID '[' Simple_expression ']'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 1 15 32 43 46
')' (41) 1 15 32 43 46
',' (44) 3 34
'.' (46) 1
':' (58) 4 13 17 18
';' (59) 1 4 10 13 14 18 23
'[' (91) 7 30 47
']' (93) 7 30 47
error (256)
PROGRAM (258) 1
FUNCTION (259) 13
PROCEDURE (260) 14
BEG (261) 19
END (262) 19
IF (263) 27
THEN (264) 27
ELSE (265) 27
WHILE (266) 28
DO (267) 28
VAR (268) 4
ARRAY (269) 7
OF (270) 7
ARRSEP (271) 7
INTEGER (272) 8
REAL (273) 9
ASSIGNOP (274) 24
RELOP (275) 36
ADDOP (276) 38 39
MULOP (277) 41
ID (278) 1 2 3 13 14 29 30 31 32 42 43 47
INUM (279) 7 44
RNUM (280) 45


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
Identifier_list (36)
    on left: 2 3, on right: 1 3 4 17 18
Declarations (37)
    on left: 4 5, on right: 1 4 12
Type (38)
    on left: 6 7, on right: 4 17 18
Standard_type (39)
    on left: 8 9, on right: 6 7 13
Subprogram_declarations (40)
    on left: 10 11, on right: 1 10
Subprogram_declaration (41)
    on left: 12, on right: 10
Subprogram_head (42)
    on left: 13 14, on right: 12
Arguments (43)
    on left: 15 16, on right: 13 14
Parameter_list (44)
    on left: 17 18, on right: 15 18
Compound_statement (45)
    on left: 19, on right: 1 12 26
Optional_statements (46)
    on left: 20 21, on right: 19
Statement_list (47)
    on left: 22 23, on right: 20 23
Statement (48)
    on left: 24 25 26 27 28, on right: 22 23 27 28
Variable (49)
    on left: 29 30, on right: 24
Procedure_statement (50)
    on left: 31 32, on right: 25
Expression_list (51)
    on left: 33 34, on right: 30 32 34 43
Expression (52)
    on left: 35 36, on right: 24 27 28 33 34 46
Simple_expression (53)
    on left: 37 38 39, on right: 35 36 39 47
Term (54)
    on left: 40 41, on right: 37 38 39 41
Factor (55)
    on left: 42 43 44 45 46 47, on right: 40 41


state 0

    0 $accept: . Program $end

    PROGRAM  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: PROGRAM . ID '(' Identifier_list ')' ';' Declarations Subprogram_declarations Compound_statement '.'

    ID  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: PROGRAM ID . '(' Identifier_list ')' ';' Declarations Subprogram_declarations Compound_statement '.'

    '('  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: PROGRAM ID '(' . Identifier_list ')' ';' Declarations Subprogram_declarations Compound_statement '.'

    ID  shift, and go to state 6

    Identifier_list  go to state 7


state 6

    2 Identifier_list: ID .

    $default  reduce using rule 2 (Identifier_list)


state 7

    1 Program: PROGRAM ID '(' Identifier_list . ')' ';' Declarations Subprogram_declarations Compound_statement '.'
    3 Identifier_list: Identifier_list . ',' ID

    ')'  shift, and go to state 8
    ','  shift, and go to state 9


state 8

    1 Program: PROGRAM ID '(' Identifier_list ')' . ';' Declarations Subprogram_declarations Compound_statement '.'

    ';'  shift, and go to state 10


state 9

    3 Identifier_list: Identifier_list ',' . ID

    ID  shift, and go to state 11


state 10

    1 Program: PROGRAM ID '(' Identifier_list ')' ';' . Declarations Subprogram_declarations Compound_statement '.'

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 12


state 11

    3 Identifier_list: Identifier_list ',' ID .

    $default  reduce using rule 3 (Identifier_list)


state 12

    1 Program: PROGRAM ID '(' Identifier_list ')' ';' Declarations . Subprogram_declarations Compound_statement '.'
    4 Declarations: Declarations . VAR Identifier_list ':' Type ';'

    VAR  shift, and go to state 13

    $default  reduce using rule 11 (Subprogram_declarations)

    Subprogram_declarations  go to state 14


state 13

    4 Declarations: Declarations VAR . Identifier_list ':' Type ';'

    ID  shift, and go to state 6

    Identifier_list  go to state 15


state 14

    1 Program: PROGRAM ID '(' Identifier_list ')' ';' Declarations Subprogram_declarations . Compound_statement '.'
   10 Subprogram_declarations: Subprogram_declarations . Subprogram_declaration ';'

    FUNCTION   shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    BEG        shift, and go to state 18

    Subprogram_declaration  go to state 19
    Subprogram_head         go to state 20
    Compound_statement      go to state 21


state 15

    3 Identifier_list: Identifier_list . ',' ID
    4 Declarations: Declarations VAR Identifier_list . ':' Type ';'

    ','  shift, and go to state 9
    ':'  shift, and go to state 22


state 16

   13 Subprogram_head: FUNCTION . ID Arguments ':' Standard_type ';'

    ID  shift, and go to state 23


state 17

   14 Subprogram_head: PROCEDURE . ID Arguments ';'

    ID  shift, and go to state 24


state 18

   19 Compound_statement: BEG . Optional_statements END

    BEG    shift, and go to state 18
    IF     shift, and go to state 25
    WHILE  shift, and go to state 26
    ID     shift, and go to state 27

    $default  reduce using rule 21 (Optional_statements)

    Compound_statement   go to state 28
    Optional_statements  go to state 29
    Statement_list       go to state 30
    Statement            go to state 31
    Variable             go to state 32
    Procedure_statement  go to state 33


state 19

   10 Subprogram_declarations: Subprogram_declarations Subprogram_declaration . ';'

    ';'  shift, and go to state 34


state 20

   12 Subprogram_declaration: Subprogram_head . Declarations Compound_statement

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 35


state 21

    1 Program: PROGRAM ID '(' Identifier_list ')' ';' Declarations Subprogram_declarations Compound_statement . '.'

    '.'  shift, and go to state 36


state 22

    4 Declarations: Declarations VAR Identifier_list ':' . Type ';'

    ARRAY    shift, and go to state 37
    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39

    Type           go to state 40
    Standard_type  go to state 41


state 23

   13 Subprogram_head: FUNCTION ID . Arguments ':' Standard_type ';'

    '('  shift, and go to state 42

    $default  reduce using rule 16 (Arguments)

    Arguments  go to state 43


state 24

   14 Subprogram_head: PROCEDURE ID . Arguments ';'

    '('  shift, and go to state 42

    $default  reduce using rule 16 (Arguments)

    Arguments  go to state 44


state 25

   27 Statement: IF . Expression THEN Statement ELSE Statement

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression         go to state 50
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 26

   28 Statement: WHILE . Expression DO Statement

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression         go to state 54
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 27

   29 Variable: ID .
   30         | ID . '[' Expression_list ']'
   31 Procedure_statement: ID .
   32                    | ID . '(' Expression_list ')'

    '('  shift, and go to state 55
    '['  shift, and go to state 56

    ASSIGNOP  reduce using rule 29 (Variable)
    $default  reduce using rule 31 (Procedure_statement)


state 28

   26 Statement: Compound_statement .

    $default  reduce using rule 26 (Statement)


state 29

   19 Compound_statement: BEG Optional_statements . END

    END  shift, and go to state 57


state 30

   20 Optional_statements: Statement_list .
   23 Statement_list: Statement_list . ';' Statement

    ';'  shift, and go to state 58

    $default  reduce using rule 20 (Optional_statements)


state 31

   22 Statement_list: Statement .

    $default  reduce using rule 22 (Statement_list)


state 32

   24 Statement: Variable . ASSIGNOP Expression

    ASSIGNOP  shift, and go to state 59


state 33

   25 Statement: Procedure_statement .

    $default  reduce using rule 25 (Statement)


state 34

   10 Subprogram_declarations: Subprogram_declarations Subprogram_declaration ';' .

    $default  reduce using rule 10 (Subprogram_declarations)


state 35

    4 Declarations: Declarations . VAR Identifier_list ':' Type ';'
   12 Subprogram_declaration: Subprogram_head Declarations . Compound_statement

    BEG  shift, and go to state 18
    VAR  shift, and go to state 13

    Compound_statement  go to state 60


state 36

    1 Program: PROGRAM ID '(' Identifier_list ')' ';' Declarations Subprogram_declarations Compound_statement '.' .

    $default  reduce using rule 1 (Program)


state 37

    7 Type: ARRAY . '[' INUM ARRSEP INUM ']' OF Standard_type

    '['  shift, and go to state 61


state 38

    8 Standard_type: INTEGER .

    $default  reduce using rule 8 (Standard_type)


state 39

    9 Standard_type: REAL .

    $default  reduce using rule 9 (Standard_type)


state 40

    4 Declarations: Declarations VAR Identifier_list ':' Type . ';'

    ';'  shift, and go to state 62


state 41

    6 Type: Standard_type .

    $default  reduce using rule 6 (Type)


state 42

   15 Arguments: '(' . Parameter_list ')'

    ID  shift, and go to state 6

    Identifier_list  go to state 63
    Parameter_list   go to state 64


state 43

   13 Subprogram_head: FUNCTION ID Arguments . ':' Standard_type ';'

    ':'  shift, and go to state 65


state 44

   14 Subprogram_head: PROCEDURE ID Arguments . ';'

    ';'  shift, and go to state 66


state 45

   38 Simple_expression: ADDOP . Term

    ID    shift, and go to state 46
    INUM  shift, and go to state 47
    RNUM  shift, and go to state 48
    '('   shift, and go to state 49

    Term    go to state 67
    Factor  go to state 53


state 46

   42 Factor: ID .
   43       | ID . '(' Expression_list ')'
   47       | ID . '[' Simple_expression ']'

    '('  shift, and go to state 68
    '['  shift, and go to state 69

    $default  reduce using rule 42 (Factor)


state 47

   44 Factor: INUM .

    $default  reduce using rule 44 (Factor)


state 48

   45 Factor: RNUM .

    $default  reduce using rule 45 (Factor)


state 49

   46 Factor: '(' . Expression ')'

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression         go to state 70
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 50

   27 Statement: IF Expression . THEN Statement ELSE Statement

    THEN  shift, and go to state 71


state 51

   35 Expression: Simple_expression .
   36           | Simple_expression . RELOP Simple_expression
   39 Simple_expression: Simple_expression . ADDOP Term

    RELOP  shift, and go to state 72
    ADDOP  shift, and go to state 73

    $default  reduce using rule 35 (Expression)


state 52

   37 Simple_expression: Term .
   41 Term: Term . MULOP Factor

    MULOP  shift, and go to state 74

    $default  reduce using rule 37 (Simple_expression)


state 53

   40 Term: Factor .

    $default  reduce using rule 40 (Term)


state 54

   28 Statement: WHILE Expression . DO Statement

    DO  shift, and go to state 75


state 55

   32 Procedure_statement: ID '(' . Expression_list ')'

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression_list    go to state 76
    Expression         go to state 77
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 56

   30 Variable: ID '[' . Expression_list ']'

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression_list    go to state 78
    Expression         go to state 77
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 57

   19 Compound_statement: BEG Optional_statements END .

    $default  reduce using rule 19 (Compound_statement)


state 58

   23 Statement_list: Statement_list ';' . Statement

    BEG    shift, and go to state 18
    IF     shift, and go to state 25
    WHILE  shift, and go to state 26
    ID     shift, and go to state 27

    Compound_statement   go to state 28
    Statement            go to state 79
    Variable             go to state 32
    Procedure_statement  go to state 33


state 59

   24 Statement: Variable ASSIGNOP . Expression

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression         go to state 80
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 60

   12 Subprogram_declaration: Subprogram_head Declarations Compound_statement .

    $default  reduce using rule 12 (Subprogram_declaration)


state 61

    7 Type: ARRAY '[' . INUM ARRSEP INUM ']' OF Standard_type

    INUM  shift, and go to state 81


state 62

    4 Declarations: Declarations VAR Identifier_list ':' Type ';' .

    $default  reduce using rule 4 (Declarations)


state 63

    3 Identifier_list: Identifier_list . ',' ID
   17 Parameter_list: Identifier_list . ':' Type

    ','  shift, and go to state 9
    ':'  shift, and go to state 82


state 64

   15 Arguments: '(' Parameter_list . ')'
   18 Parameter_list: Parameter_list . ';' Identifier_list ':' Type

    ')'  shift, and go to state 83
    ';'  shift, and go to state 84


state 65

   13 Subprogram_head: FUNCTION ID Arguments ':' . Standard_type ';'

    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39

    Standard_type  go to state 85


state 66

   14 Subprogram_head: PROCEDURE ID Arguments ';' .

    $default  reduce using rule 14 (Subprogram_head)


state 67

   38 Simple_expression: ADDOP Term .
   41 Term: Term . MULOP Factor

    MULOP  shift, and go to state 74

    $default  reduce using rule 38 (Simple_expression)


state 68

   43 Factor: ID '(' . Expression_list ')'

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression_list    go to state 86
    Expression         go to state 77
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 69

   47 Factor: ID '[' . Simple_expression ']'

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Simple_expression  go to state 87
    Term               go to state 52
    Factor             go to state 53


state 70

   46 Factor: '(' Expression . ')'

    ')'  shift, and go to state 88


state 71

   27 Statement: IF Expression THEN . Statement ELSE Statement

    BEG    shift, and go to state 18
    IF     shift, and go to state 25
    WHILE  shift, and go to state 26
    ID     shift, and go to state 27

    Compound_statement   go to state 28
    Statement            go to state 89
    Variable             go to state 32
    Procedure_statement  go to state 33


state 72

   36 Expression: Simple_expression RELOP . Simple_expression

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Simple_expression  go to state 90
    Term               go to state 52
    Factor             go to state 53


state 73

   39 Simple_expression: Simple_expression ADDOP . Term

    ID    shift, and go to state 46
    INUM  shift, and go to state 47
    RNUM  shift, and go to state 48
    '('   shift, and go to state 49

    Term    go to state 91
    Factor  go to state 53


state 74

   41 Term: Term MULOP . Factor

    ID    shift, and go to state 46
    INUM  shift, and go to state 47
    RNUM  shift, and go to state 48
    '('   shift, and go to state 49

    Factor  go to state 92


state 75

   28 Statement: WHILE Expression DO . Statement

    BEG    shift, and go to state 18
    IF     shift, and go to state 25
    WHILE  shift, and go to state 26
    ID     shift, and go to state 27

    Compound_statement   go to state 28
    Statement            go to state 93
    Variable             go to state 32
    Procedure_statement  go to state 33


state 76

   32 Procedure_statement: ID '(' Expression_list . ')'
   34 Expression_list: Expression_list . ',' Expression

    ')'  shift, and go to state 94
    ','  shift, and go to state 95


state 77

   33 Expression_list: Expression .

    $default  reduce using rule 33 (Expression_list)


state 78

   30 Variable: ID '[' Expression_list . ']'
   34 Expression_list: Expression_list . ',' Expression

    ','  shift, and go to state 95
    ']'  shift, and go to state 96


state 79

   23 Statement_list: Statement_list ';' Statement .

    $default  reduce using rule 23 (Statement_list)


state 80

   24 Statement: Variable ASSIGNOP Expression .

    $default  reduce using rule 24 (Statement)


state 81

    7 Type: ARRAY '[' INUM . ARRSEP INUM ']' OF Standard_type

    ARRSEP  shift, and go to state 97


state 82

   17 Parameter_list: Identifier_list ':' . Type

    ARRAY    shift, and go to state 37
    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39

    Type           go to state 98
    Standard_type  go to state 41


state 83

   15 Arguments: '(' Parameter_list ')' .

    $default  reduce using rule 15 (Arguments)


state 84

   18 Parameter_list: Parameter_list ';' . Identifier_list ':' Type

    ID  shift, and go to state 6

    Identifier_list  go to state 99


state 85

   13 Subprogram_head: FUNCTION ID Arguments ':' Standard_type . ';'

    ';'  shift, and go to state 100


state 86

   34 Expression_list: Expression_list . ',' Expression
   43 Factor: ID '(' Expression_list . ')'

    ')'  shift, and go to state 101
    ','  shift, and go to state 95


state 87

   39 Simple_expression: Simple_expression . ADDOP Term
   47 Factor: ID '[' Simple_expression . ']'

    ADDOP  shift, and go to state 73
    ']'    shift, and go to state 102


state 88

   46 Factor: '(' Expression ')' .

    $default  reduce using rule 46 (Factor)


state 89

   27 Statement: IF Expression THEN Statement . ELSE Statement

    ELSE  shift, and go to state 103


state 90

   36 Expression: Simple_expression RELOP Simple_expression .
   39 Simple_expression: Simple_expression . ADDOP Term

    ADDOP  shift, and go to state 73

    $default  reduce using rule 36 (Expression)


state 91

   39 Simple_expression: Simple_expression ADDOP Term .
   41 Term: Term . MULOP Factor

    MULOP  shift, and go to state 74

    $default  reduce using rule 39 (Simple_expression)


state 92

   41 Term: Term MULOP Factor .

    $default  reduce using rule 41 (Term)


state 93

   28 Statement: WHILE Expression DO Statement .

    $default  reduce using rule 28 (Statement)


state 94

   32 Procedure_statement: ID '(' Expression_list ')' .

    $default  reduce using rule 32 (Procedure_statement)


state 95

   34 Expression_list: Expression_list ',' . Expression

    ADDOP  shift, and go to state 45
    ID     shift, and go to state 46
    INUM   shift, and go to state 47
    RNUM   shift, and go to state 48
    '('    shift, and go to state 49

    Expression         go to state 104
    Simple_expression  go to state 51
    Term               go to state 52
    Factor             go to state 53


state 96

   30 Variable: ID '[' Expression_list ']' .

    $default  reduce using rule 30 (Variable)


state 97

    7 Type: ARRAY '[' INUM ARRSEP . INUM ']' OF Standard_type

    INUM  shift, and go to state 105


state 98

   17 Parameter_list: Identifier_list ':' Type .

    $default  reduce using rule 17 (Parameter_list)


state 99

    3 Identifier_list: Identifier_list . ',' ID
   18 Parameter_list: Parameter_list ';' Identifier_list . ':' Type

    ','  shift, and go to state 9
    ':'  shift, and go to state 106


state 100

   13 Subprogram_head: FUNCTION ID Arguments ':' Standard_type ';' .

    $default  reduce using rule 13 (Subprogram_head)


state 101

   43 Factor: ID '(' Expression_list ')' .

    $default  reduce using rule 43 (Factor)


state 102

   47 Factor: ID '[' Simple_expression ']' .

    $default  reduce using rule 47 (Factor)


state 103

   27 Statement: IF Expression THEN Statement ELSE . Statement

    BEG    shift, and go to state 18
    IF     shift, and go to state 25
    WHILE  shift, and go to state 26
    ID     shift, and go to state 27

    Compound_statement   go to state 28
    Statement            go to state 107
    Variable             go to state 32
    Procedure_statement  go to state 33


state 104

   34 Expression_list: Expression_list ',' Expression .

    $default  reduce using rule 34 (Expression_list)


state 105

    7 Type: ARRAY '[' INUM ARRSEP INUM . ']' OF Standard_type

    ']'  shift, and go to state 108


state 106

   18 Parameter_list: Parameter_list ';' Identifier_list ':' . Type

    ARRAY    shift, and go to state 37
    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39

    Type           go to state 109
    Standard_type  go to state 41


state 107

   27 Statement: IF Expression THEN Statement ELSE Statement .

    $default  reduce using rule 27 (Statement)


state 108

    7 Type: ARRAY '[' INUM ARRSEP INUM ']' . OF Standard_type

    OF  shift, and go to state 110


state 109

   18 Parameter_list: Parameter_list ';' Identifier_list ':' Type .

    $default  reduce using rule 18 (Parameter_list)


state 110

    7 Type: ARRAY '[' INUM ARRSEP INUM ']' OF . Standard_type

    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39

    Standard_type  go to state 111


state 111

    7 Type: ARRAY '[' INUM ARRSEP INUM ']' OF Standard_type .

    $default  reduce using rule 7 (Type)
